my hair dressers

--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
- <head>
-   <title>hair dresser</title>
- <head>
-   <body>
-  <h1>hair dresser</h1>
-  <h2>fortunate`s hair dresser<h2>
-</h2>
-     </body>
-     </html>
-<html>
+   <<head>
+     <title> my hair dressers</<title>Home</title>
+   </<body>
+<h1>my hair dresser</h1>
+                   
+   </body>
+</head>
