details for my bussiness

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
      <title> my hair dressers</<title>Home</title>
    </<body>
 <h1>my hair dresser</h1>
-                   
+<h2>fortunate`s hair dresser</<h2>
+  <p1>my hair dresser is about styling someone`s hair and i can give you an hair treatment so that your  hair can grow healthy and have a good growth
    </body>
 </head>
+<p2>how i`w be charging you for what i`h done on you hair .
+
+
+<details>for call:0763014359 email:mametjafortunate25@gmail.com on whats app:0763014359 place:gauteng phelindaba saulsville matlejoane street.
