--- a/index.html
+++ b/index.html
@@ -12,3 +12,6 @@
 
 
 <details>for call:0763014359 email:mametjafortunate25@gmail.com on whats app:0763014359 place:gauteng phelindaba saulsville matlejoane street.
+
+i will be advertising my hair style media="screen"now i will be informing about prices and thing needed when coming to my saloon staight back,straight up,braid,twist,benny and betty if you are interested in one of those styles you can take those ditails and call me,make an appointment.
+</style>
