--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
 
 <details>for call:0763014359 email:mametjafortunate25@gmail.com on whats app:0763014359 place:gauteng phelindaba saulsville matlejoane street.
 
-i will be advertising my hair style media="screen"now i will be informing about prices and thing needed when coming to my saloon staight back,straight up,braid,twist,benny and betty if you are interested in one of those styles you can take those ditails and call me,make an appointment.
+
+</body>i will be advertising my hair style media="screen"now i will be informing about prices and thing needed when coming to my saloon staight back,straight up,braid,twist,benny and betty if you are interested in one of those styles you can take those ditails and call me,make an appointment.
 types of hepiece you need we all have that.
+
+</body>i would like to make an advertisement about my hair dressing for incase if you want to came you can make an appointment via hair dressing and if you need to ask me about something you can go throughn my details and blow you mind with such an idea of coming to my hair dresser.
