about my business

--- a/index.html
+++ b/index.html
@@ -18,3 +18,4 @@
 types of hepiece you need we all have that.
 
 </body>i would like to make an advertisement about my hair dressing for incase if you want to came you can make an appointment via hair dressing and if you need to ask me about something you can go throughn my details and blow you mind with such an idea of coming to my hair dresser.
+we have defferent customers from different places i have some people who helps me via hair dressing
