--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <p2>how i`w be charging you for what i`h done on you hair .
 
 
-<details>for call:0763014359 email:mametjafortunate25@gmail.com on whats app:0763014359 place:gauteng phelindaba saulsville matlejoane street.
-
-
+<details>forcall:0763014359.
+        >whatapp:0763014359.
+        >email  :mametjafortunate25@gmail.
+        >PLACE  :GAUTENG PHELINDABA SAULSVILLE 27 MADIBA STREET.
+        
 </body>i will be advertising my hair style media="screen"now i will be informing about prices and thing needed when coming to my saloon staight back,straight up,braid,twist,benny and betty if you are interested in one of those styles you can take those ditails and call me,make an appointment.
 types of hepiece you need we all have that.
 
