--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         >email  :mametjafortunate25@gmail.
         >PLACE  :GAUTENG PHELINDABA SAULSVILLE 27 MADIBA STREET.
 
-</body>i will be advertising my hair style media="screen"now i will be informing about prices and thing needed when coming to my saloon staight back,straight up,braid,twist,benny and betty if you are interested in one of those styles you can take those ditails and call me,make an appointment.
+</body>
+i will be advertising my hair style media="screen"now i will be informing about prices and thing needed when coming to my saloon staight back,straight up,braid,twist,benny and betty if you are interested in one of those styles you can take those ditails and call me,make an appointment.
 types of hepiece you need we all have that.
 
 I would like to advertise my hair dresser and make that to be seen by the whole world so that my bussiness can be more popular like other trends on social media we all need to know about what this trend is about there will be an information about my bussiness under my picture for example i can make a new so that anyone can know who is the creator of the style.
