--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         >whatapp:0763014359.
         >email  :mametjafortunate25@gmail.
         >PLACE  :GAUTENG PHELINDABA SAULSVILLE 27 MADIBA STREET.
-
+        >on fcbk:siyanda yanda shantelle
 </body>
 i will be advertising my hair style media="screen"now i will be informing about prices and thing needed when coming to my saloon staight back,straight up,braid,twist,benny and betty if you are interested in one of those styles you can take those ditails and call me,make an appointment.
 types of hepiece you need we all have that.
