--- a/index.html
+++ b/index.html
@@ -1,8 +1,39 @@
 <!DOCTYPE html>
-<html>
-   <<head>
-     <title> my hair dressers</<title>Home</title>
-   </<body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
 <h1>my hair dresser</h1>
 <h2>fortunate`s hair dresser</<h2>
   <p1>my hair dresser is about styling someone`s hair and i can give you an hair treatment so that your  hair can grow healthy and have a good growth
@@ -21,5 +52,5 @@ i will be advertising my hair style media="screen"now i will be informing about 
 types of hepiece you need we all have that.
 
 I would like to advertise my hair dresser and make that to be seen by the whole world so that my bussiness can be more popular like other trends on social media we all need to know about what this trend is about there will be an information about my bussiness under my picture for example i can make a new so that anyone can know who is the creator of the style.
-<img src="style1.jpg"alt="myself">
-<<img src="style2.jpg" alt="photo">
+<<img src="fortunate.jpg" alt="myself
+">
