--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 </head>
 <p2>how i`w be charging you for what i`h done on you hair .
 
-
 <details>forcall:0763014359.
         >whatapp:0763014359.
         >email  :mametjafortunate25@gmail.
@@ -52,5 +51,5 @@ i will be advertising my hair style media="screen"now i will be informing about 
 types of hepiece you need we all have that.
 
 I would like to advertise my hair dresser and make that to be seen by the whole world so that my bussiness can be more popular like other trends on social media we all need to know about what this trend is about there will be an information about my bussiness under my picture for example i can make a new so that anyone can know who is the creator of the style.
-<<img src="fortunate.jpg" alt="myself
-">
+<img src="fortunate.jpg1" alt="myself>
+<<img src="" alt="">
